# NextDoc

./: .env.example  .gitignore  Inference_Medical.ipynb  Procfile  README.md  UI_PAGES_COMPLETE_GUIDE.md  Voice_Service.ipynb  package.json  pyproject.toml  replit.md  requirements.txt  start.sh
app/: __init__.py  config.py  database.py  dependencies.py  main.py  session_manager.py
app/admin/: router.py
app/ai_engine/: __init__.py  ai_logic.py  inference.py  streaming_logic.py  utils.py
app/api/: admin_notifications.py  admin_reports.py  chat_send.py  contact.py  conversations.py  daily_notes.py  medicine_intake.py  medicine_notes.py  medicines.py  message_reports.py  messages.py  notification_settings.py  notifications.py  profile.py  reminders.py  reports.py  scan.py  symptom_checker.py  tts.py  upload.py
app/auth/: __init__.py  dependencies.py  models.py  mongo_dependencies.py  mongo_models.py  mongo_router.py  mongo_service.py  pg_database.py  router.py  security.py  seed_admin.py  service.py
app/billing/: __init__.py  models.py  razorpay_service.py  router.py  schemas.py  subscription_guard.py
app/chat/: __init__.py  logic.py  router.py  schemas.py  services.py  summarizer.py
app/content/: __init__.py  models.py  router.py  service.py
app/email/: __init__.py  service.py
app/features/: __init__.py  medication.py  (+3 more)
docs/: BACKEND_API_SPECIFICATION.md
frontend/: .env.example  package.json  tsconfig.json  vite.config.ts
mobile-app/: QUICK_START.md  README.md  app.json  package.json
notebooks/: kaggle_training.ipynb  lightning_inference.ipynb
(+149 files in other folders)
